--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>utils</title>
 </head>
 <body>
-utils
+util
 <script src="js/hash.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
