--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <body>
 util
 <script src="js/hash.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/proxy.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
